--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "server": "node server/index.js"
   },
   "dependencies": {
-    "@adminjs/express": "file:vendor/adminjs-express",
+    "@adminjs/express": "^6.1.1",
+    "@adminjs/mongoose": "^3.0.2",
+    "adminjs": "^7.8.13",
+    "express": "^4.21.2",
     "lucide-react": "^0.344.0",
+    "mongoose": "^8.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
