--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 VITE_API_BASE_URL=http://localhost:5000/api
 VITE_SUPABASE_URL=https://hlaxbvzzrvvqsjhqgdnz.supabase.co
 VITE_SUPABASE_ANON_KEY=sb_publishable_nAkKEcUehmasWwkqcc9W5Q_4-IXmogP
+VITE_SUPABASE_CONTACT_TABLE=contact_submissions
